@@ -1,3 +1,12 @@
+2010-03-03  Jason Merrill  <jason@redhat.com>
+
+	PR c++/12909
+	* mangle.c: Include cgraph.h.
+	(mangle_decl): If the mangled name will change in a later
+	ABI version, make the later mangled name an alias.
+	* method.c (make_alias_for): Copy DECL_ARGUMENTS.
+	* Make-lang.in (mangle.o): Depend on cgraph.h.
+
 2010-03-01  Marco Poletti  <poletti.marco@gmail.com>
 
 	* pt.c (redeclare_class_template): Use error_n and inform_n.
